--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 }
-h1 {
+h1, .connect {
 	font-family: Solitreo;
 }
 body {
@@ -15,9 +15,16 @@ body {
 	align-items: center;
 	justify-content: center;
 }
+.whole{
+	position: relative;
+}
 .container {
 	position: relative;
 	top: 0vmin;
+}
+.title{
+	position: relative;
+	text-align: center;
 }
 .envelope {
 	position: relative;
@@ -123,6 +130,32 @@ body {
 	transform: rotate(45deg);
 	transform-origin: 100% 100%;
 }
+.btn{
+	position: relative;
+	text-align: center;
+}
+.connect {
+	border: none;
+	background-color: white; 
+	color: black; 
+	border: 2px solid #f44336;
+	padding: 5px 10px;
+	text-align: center;
+	border-radius: 12px;
+	text-decoration: none;
+	font-weight: 600;
+	display: inline-block;
+	font-size: 10px;
+	margin: 4px 2px;
+	transition-duration: 0.4s;
+	cursor: pointer;
+  }
+
+  .connect:hover {
+	background-color: #f44336;
+	color: white;
+  }
+
 @keyframes open {
 	100% {
 		transform: rotatex(180deg);
